--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,20 +1,46 @@
 body {
   font-family: Helvetica;
   text-align: center;
-  color: white;
 }
 
-.topArea {
+.banner {
   background-image: url("../images/the-flatiron-building.png");
 }
 
 h1 {
   font-size: 70px;
   font-weight: bold;
+  color: white;
 }
 
 a {
-  color: white;
   font-size: 18px;
+  color: white;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  
+  font-size: 23px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14px;
+}
+
+p.footer {
+  text-align: left;
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+}
+
+.whiteForeground {
+  color: white;
 }
 
